Updated 2 files via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -64,19 +64,23 @@ blocks:
         color-scheme: dark
     -
         _id: horizontal-scroll-basic
-        block-content-html: <h3> lorem </h3> <h2>  experiences  </h2>
+        block-content-html: >-
+            <h3 class="text-center">WEDDINGS &amp; EVENTS</h3><p
+            class="text-center"> </p><h2 class="text-center">Inspiring
+            spaces</h2><p class="text-center">Host with distinction at Regent
+            Bali Canggu, where timeless design and thoughtful service set the
+            stage for inspired occasions, from intimate boardroom meetings to
+            unforgettable weddings.</p>
         image-width: max(25%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
         scroll-items:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/wedding-scroll1.jpg
                 block-content-html: >-
-                    <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur
-                    adipisicing elit. Ab corporis obcaecati doloremque optio!
-                    Unde accusantium, esse consectetur asperiores voluptates
-                    obcaecati nobis libero necessitatibus vero labore quod
-                    eaque. Illum, tenetur alias!</p>
+                    <h3>Beach House</h3> <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut.</p><p></p>
                 link:
             -
                 image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
