Updated 3 files via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -83,31 +83,18 @@ blocks:
                     incididunt ut.</p><p></p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/wedding-scroll2.jpg
                 block-content-html: >-
-                    <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur
-                    adipisicing elit. Ab corporis obcaecati doloremque optio!
-                    Unde accusantium, esse consectetur asperiores voluptates
-                    obcaecati nobis libero necessitatibus vero labore quod
-                    eaque. Illum, tenetur alias!</p>
+                    <h3>BEACH LAWN</h3> <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut.</p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/wedding-scroll3.jpg
                 block-content-html: >-
-                    <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur
-                    adipisicing elit. Ab corporis obcaecati doloremque optio!
-                    Unde accusantium, esse consectetur asperiores voluptates
-                    obcaecati nobis libero necessitatibus vero labore quod
-                    eaque. Illum, tenetur alias!</p>
-                link:
-            -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-                block-content-html: >-
-                    <h3>Lorem ipsum dolor</h3> <p> sit amet consectetur
-                    adipisicing elit. Ab corporis obcaecati doloremque optio!
-                    Unde accusantium, esse consectetur asperiores voluptates
-                    obcaecati nobis libero necessitatibus vero labore quod
-                    eaque. Illum, tenetur alias!</p>
+                    <h3>CHEFS TABLE</h3> <p>Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut.</p>
                 link:
         color-scheme: base
     -
