Updated 1 file via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -98,6 +98,36 @@ blocks:
                 link:
         color-scheme: base
     -
+        _id: banner-split-video
+        block-content-html: >-
+            <h3 class="sub-heading">WEDDINGS AT REGENT BALI CANGGU</h3><h2
+            class="heading-lg">A breathtaking beachside
+            wedding</h2><p>Once-in-a-lifetime weddings deserve extraordinary
+            settings and breathtaking backdrops. Exchange vows surrounded by
+            your closest confidants, family, and friends in a seaside sanctuary
+            where every detail is designed to inspire awe and serenity. Whether
+            it’s an intimate ceremony on the sand or a grand celebration beneath
+            the stars, Regent Bali Canggu offers refined elegance in a truly
+            romantic setting. From personalised planning to exquisite cuisine,
+            your special day is carefully curated to reflect your love
+            story—creating memories that will linger beautifully for a
+            lifetime.</p>
+        background-desktop-image: /uploads/wedding1.jpg
+        background-mobile-image: /uploads/wedding1.jpg
+        videos:
+            -
+                video_path:
+                video_type:
+        background-alt:
+        desktop-image-position: right
+        text-alignment: left
+        vert-alignment: middle
+        mobile-image-position: bottom
+        img_aspect: Square
+        collapse-top-space: false
+        collapse-bottom-space: false
+        color-scheme: dark
+    -
         _id: text-block-top-overlap
         block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">Beach House</h2><p>The latest beachfront destination set along the sun-drenched shores of Canggu, Beach House blends coastal charm with refined elegance—and mesmerizing views directly on the world-famous Echo surf break.\L\L</p><p>Whether you're here to sip artisanal cocktails by the infinity pool, savour fresh locally sourced coastal cuisine, or unwind to sunset sounds, Beach House is your barefoot escape to Bali's effortlessly cool surfside lifestyle. Perfect for intimate gatherings, vibrant events, or serene solo moments—this is Canggu's new home of golden hours and ocean breeze.</p>"
         overlay-color-scheme: mint-400
