Updated 1 file via CloudCannon.

--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -99,27 +99,15 @@ blocks:
         color-scheme: base
     -
         _id: banner-split-video
-        block-content-html: >-
-            <h3 class="sub-heading">WEDDINGS AT REGENT BALI CANGGU</h3><h2
-            class="heading-lg">A breathtaking beachside
-            wedding</h2><p>Once-in-a-lifetime weddings deserve extraordinary
-            settings and breathtaking backdrops. Exchange vows surrounded by
-            your closest confidants, family, and friends in a seaside sanctuary
-            where every detail is designed to inspire awe and serenity. Whether
-            it’s an intimate ceremony on the sand or a grand celebration beneath
-            the stars, Regent Bali Canggu offers refined elegance in a truly
-            romantic setting. From personalised planning to exquisite cuisine,
-            your special day is carefully curated to reflect your love
-            story—creating memories that will linger beautifully for a
-            lifetime.</p>
-        background-desktop-image: /uploads/wedding1.jpg
-        background-mobile-image: /uploads/wedding1.jpg
+        block-content-html: "<h3 class=\"sub-heading\">PRIVATE &amp; CORPORATE EVENTS</h3><h2 class=\"heading-lg\">Above the Ocean, \LBeyond the Ordinary</h2><p>Host with distinction at Regent Bali Canggu, where timeless design and thoughtful service set the stage for inspired occasions, from intimate boardroom meetings to unforgettable weddings. Enjoy 10% off your master bill when booking by 31 August 2025 (or 5% for non-members) for events held by 30 March 2026. <br /><br />Enhance the experience further with our global offer, earn 3X IHG One Rewards points and receive 2 Bonus Elite Night Credits when booking by 30 June 2025 for events taking place by 30 November 2025.</p>"
+        background-desktop-image: /uploads/desktop-banner.jpg
+        background-mobile-image: /uploads/desktop-banner.jpg
         videos:
             -
                 video_path:
                 video_type:
         background-alt:
-        desktop-image-position: right
+        desktop-image-position: left
         text-alignment: left
         vert-alignment: middle
         mobile-image-position: bottom
@@ -127,14 +115,6 @@ blocks:
         collapse-top-space: false
         collapse-bottom-space: false
         color-scheme: dark
-    -
-        _id: text-block-top-overlap
-        block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">Beach House</h2><p>The latest beachfront destination set along the sun-drenched shores of Canggu, Beach House blends coastal charm with refined elegance—and mesmerizing views directly on the world-famous Echo surf break.\L\L</p><p>Whether you're here to sip artisanal cocktails by the infinity pool, savour fresh locally sourced coastal cuisine, or unwind to sunset sounds, Beach House is your barefoot escape to Bali's effortlessly cool surfside lifestyle. Perfect for intimate gatherings, vibrant events, or serene solo moments—this is Canggu's new home of golden hours and ocean breeze.</p>"
-        overlay-color-scheme: mint-400
-        content-max-width:
-        text-alignment: center
-        color-scheme: base
-        min-height: 50vh
     -
         _id: contact
         block-content-html:
