--- a/Wellness.html
+++ b/Wellness.html
@@ -19,15 +19,18 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h3>WEDDINGS &amp; EVENTS</h3><h2 class="heading-lg">A Moment
-            Becoming a Masterpiece</h2><p>Let us take the particulars of
-            planning out of your hands so you can focus on building meaningful
-            connections with your visitors and guests. With a selection of
-            venues for small and intimate social events, to elaborate soirées,
-            we have a selection of spaces for all requests.<br />Our stunning
-            beachfront location, coupled with the above and beyond nature of
-            Regent service, will assure a memorable event.</p>
-        overlay-color-scheme: mint-400
+            <h3 class="text-center">SPA &amp; WELLNESS</h3><h2
+            class="text-center">Beyond Balance</h2><p class="text-center">A
+            curated selection of rejuvenating treatments is now offered—each
+            designed with intention, drawing from time-honoured rituals and
+            modern sensibilities to restore balance and awaken inner harmony.
+            The journey now extends to indulgent wet areas, including a
+            rejuvenating sauna, a revitalising vitality pool, and an
+            invigorating ice bath, each thoughtfully crafted to stimulate
+            circulation, soothe tension, and awaken the senses. Together, these
+            experiences enhance the body's natural recovery and deepen the
+            feeling of renewal.</p>
+        overlay-color-scheme: dark
         content-max-width:
         text-alignment: center
         color-scheme: base
