Updated 1 file via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -19,12 +19,11 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h3 class="text-center">SPA &amp; WELLNESS</h3><h2
-            class="text-center">Beyond Balance</h2><p class="text-center">A
-            curated selection of rejuvenating treatments is now offered—each
-            designed with intention, drawing from time-honoured rituals and
-            modern sensibilities to restore balance and awaken inner harmony.
-            The journey now extends to indulgent wet areas, including a
+            <h3>SPA &amp; WELLNESS</h3><h2 class="heading-lg">Beyond
+            Balance</h2><p>A curated selection of rejuvenating treatments is now
+            offered—each designed with intention, drawing from time-honoured
+            rituals and modern sensibilities to restore balance and awaken inner
+            harmony. The journey now extends to indulgent wet areas, including a
             rejuvenating sauna, a revitalising vitality pool, and an
             invigorating ice bath, each thoughtfully crafted to stimulate
             circulation, soothe tension, and awaken the senses. Together, these
