--- a/Wellness.html
+++ b/Wellness.html
@@ -36,13 +36,20 @@ blocks:
         min-height: 50vh
     -
         _id: banner-split-video
-        block-content-html: ''
-        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        block-content-html: >-
+            <h3 class="sub-heading">REGENT SPA</h3><h2 class="heading-lg">Uplift
+            your mind &amp; elevate your senses.</h2><p>Unveiling in October
+            2025, the extensive Regent Spa &amp; Wellness experience invites you
+            on a transformative path where the mind resets and the senses are
+            elevated. Each step is guided by a clear intent to heal, weaving
+            vibrating crystal energy, soothing aromas, and restoring light
+            frequency to uplift wellbeing to new personal heights.</p>
+        background-desktop-image: /uploads/sense-of-harmony.jpg
+        background-mobile-image: /uploads/sense-of-harmony.jpg
         videos:
             -
-                video_path: /uploads/WEBSITE-BANNER.mp4
-                video_type: mp4
+                video_path:
+                video_type:
         background-alt:
         desktop-image-position: right
         text-alignment: left
@@ -51,7 +58,7 @@ blocks:
         img_aspect: Square
         collapse-top-space: false
         collapse-bottom-space: false
-        color-scheme: dark
+        color-scheme: mint-400
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
