Updated 4 files via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -62,38 +62,40 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="text-center">WEDDINGS &amp; EVENTS</h3><p
-            class="text-center"> </p><h2 class="text-center">Inspiring
-            spaces</h2><p class="text-center">Host with distinction at Regent
-            Bali Canggu, where timeless design and thoughtful service set the
-            stage for inspired occasions, from intimate boardroom meetings to
-            unforgettable weddings.</p>
+            <h3 class="text-center">SPA &amp; WELLNESS OFFERINGS</h3><p
+            class="text-center"> </p><h2 class="text-center">Explore our
+            treatments</h2><p class="text-center">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur.</p>
         image-width: max(25%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
         scroll-items:
             -
-                image: /uploads/wedding-scroll1.jpg
+                image: /uploads/treatment1.jpg
                 block-content-html: >-
-                    <h3>Beach House</h3> <p>Lorem ipsum dolor sit amet,
+                    <h3>Signature Sand bed</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
                 link:
             -
-                image: /uploads/wedding-scroll2.jpg
+                image: /uploads/treatment2.jpg
                 block-content-html: >-
-                    <h3>BEACH LAWN</h3> <p>Lorem ipsum dolor sit amet,
+                    <h3>Traditional Massages</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 link:
             -
-                image: /uploads/wedding-scroll3.jpg
+                image: /uploads/treatment3.jpg
                 block-content-html: >-
-                    <h3>CHEFS TABLE</h3> <p>Lorem ipsum dolor sit amet,
+                    <h3>Facial rejuvenation</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 link:
-        color-scheme: base
+        color-scheme: dark
     -
         _id: offset-grid
         content-1:
