Updated 1 file via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -95,7 +95,7 @@ blocks:
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 link:
-        color-scheme: dark
+        color-scheme: base
     -
         _id: offset-grid
         content-1:
