Updated 3 files via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -100,7 +100,7 @@ blocks:
         _id: offset-grid
         content-1:
             subHeading:
-            heading: SENSE OF HARMONY
+            heading: COLD PLUGE & POOL
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod  tempor incididunt ut labore et dolore magna
@@ -110,11 +110,11 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-1:
-            src: /uploads/videos/beach-cover.jpg
-            title: Regent Bali Canggu Pool View
+            src: /uploads/cold-plunge-pool-1.jpg
+            title: Cold plunge
         content-2:
             subHeading:
-            heading: WELLNESS
+            heading: SAUNA
             p-text: >-
                 <p>On Canggu Beach, surfers are silhouetted in the morning sun,
                 boards  under arms ready to take on Bali's famous reef
@@ -124,8 +124,8 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-2:
-            src: /uploads/videos/beach-cover.jpg
-            title: Regent Bali Canggu Pool View
+            src: /uploads/health-club.jpg
+            title: Sauna
         scheme:
             scheme-color: base
             scheme-padding: small-padding
