Updated 3 files via CloudCannon.

--- a/Experiences.html
+++ b/Experiences.html
@@ -8,7 +8,7 @@ blocks:
             -
                 video_path:
                 video_type:
-        placeholder_image: /uploads/wellness-banner.jpg
+        placeholder_image: /uploads/experiences-banner.jpg
         controls: false
         autoplay: true
         text-alignment: center
@@ -19,16 +19,11 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h3>SPA &amp; WELLNESS</h3><h2 class="heading-lg">Beyond
-            Balance</h2><p>A curated selection of rejuvenating treatments is now
-            offered—each designed with intention, drawing from time-honoured
-            rituals and modern sensibilities to restore balance and awaken inner
-            harmony. The journey now extends to indulgent wet areas, including a
-            rejuvenating sauna, a revitalising vitality pool, and an
-            invigorating ice bath, each thoughtfully crafted to stimulate
-            circulation, soothe tension, and awaken the senses. Together, these
-            experiences enhance the body's natural recovery and deepen the
-            feeling of renewal.</p>
+            <h3>EXPERIENCES</h3><h2 class="heading-lg">Immerse yourself in the
+            island</h2><p>A deep breath of fresh sea air, a sunset wander on the
+            beach, the gentle hum of the ocean surf. Each second is a beautiful
+            adventure waiting to unfold. Arrive with an open mind. Depart with a
+            lifetime of memories.</p>
         overlay-color-scheme: dark
         content-max-width:
         text-alignment: center
@@ -38,7 +33,7 @@ blocks:
         _id: offset-grid
         content-1:
             subHeading:
-            heading: COLD PLUGE & POOL
+            heading: IN THE HEART OF CANGGU
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod  tempor incididunt ut labore et dolore magna
@@ -48,11 +43,11 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-1:
-            src: /uploads/health-club.jpg
-            title: Cold plunge
+            src: /uploads/experience2.jpg
+            title: Experience
         content-2:
             subHeading:
-            heading: SAUNA
+            heading: GATEWAY TO BALI
             p-text: >-
                 <p>On Canggu Beach, surfers are silhouetted in the morning sun,
                 boards  under arms ready to take on Bali's famous reef
@@ -62,8 +57,8 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-2:
-            src: /uploads/cold-plunge-pool-1.jpg
-            title: Sauna
+            src: /uploads/desktop-banner.jpg
+            title: Experience
         scheme:
             scheme-color: base
             scheme-padding: small-padding
@@ -104,7 +99,7 @@ blocks:
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
                 link:
-        color-scheme: base
+        color-scheme: mint-500
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
