--- a/Experiences.html
+++ b/Experiences.html
@@ -33,7 +33,7 @@ blocks:
         _id: offset-grid
         content-1:
             subHeading:
-            heading: IN THE HEART OF CANGGU
+            heading: GATEWAY TO BALI
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod  tempor incididunt ut labore et dolore magna
@@ -47,11 +47,11 @@ blocks:
             title: Experience
         content-2:
             subHeading:
-            heading: GATEWAY TO BALI
+            heading: IN THE HEART OF CANGGU
             p-text: >-
-                <p>On Canggu Beach, surfers are silhouetted in the morning sun,
-                boards  under arms ready to take on Bali's famous reef
-                breaks.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua.</p>
             button:
             text: Discover More
             url: '#'
