Updated 5 files via CloudCannon.

--- a/Experiences.html
+++ b/Experiences.html
@@ -43,7 +43,7 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-1:
-            src: /uploads/experience2.jpg
+            src: /uploads/desktop-banner.jpg
             title: Experience
         content-2:
             subHeading:
@@ -57,7 +57,7 @@ blocks:
             url: '#'
             open-in-new-tab: false
         image-2:
-            src: /uploads/desktop-banner.jpg
+            src: /uploads/experience2.jpg
             title: Experience
         scheme:
             scheme-color: base
@@ -66,11 +66,12 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="text-center">SPA &amp; WELLNESS OFFERINGS</h3><p
-            class="text-center"> </p><h2 class="text-center">Explore our
-            treatments</h2><p class="text-center">Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            <h3 class="text-center">EXPERIENCES AT THE RESORT &amp;
+            NEARBY</h3><p class="text-center"> </p><h2
+            class="text-center">Experiences at Regent Bali Canggu</h2><p
+            class="text-center">Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
             exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -79,64 +80,61 @@ blocks:
         img_aspect: Square
         scroll-items:
             -
-                image: /uploads/treatment1.jpg
+                image: /uploads/experiences1.jpg
                 block-content-html: >-
-                    <h3>Signature Sand bed</h3> <p>Lorem ipsum dolor sit amet,
+                    <h3>School of Surf</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
                 link:
             -
-                image: /uploads/treatment2.jpg
+                image: /uploads/experiences2.jpg
                 block-content-html: >-
-                    <h3>Traditional Massages</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
-                link:
-            -
-                image: /uploads/treatment3.jpg
-                block-content-html: >-
-                    <h3>Facial rejuvenation</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
+                    <h3>Seamless Journey</h3> <p>Elevate your arrival to one of
+                    the finest luxury resorts in Bali with our seamless
+                    helicopter transfer. Soar above lush rice terraces, dramatic
+                    coastlines, and volcanic peaks as you make your way to
+                    Regent Bali Canggu. Ideal for discerning travellers seeking
+                    convenience, exclusivity, and breathtaking views, our
+                    private helicopter arrival ensures you bypass road traffic
+                    and arrive in tranquil style.</p>
                 link:
         color-scheme: mint-500
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="text-center">SPA &amp; WELLNESS OFFERINGS</h3><p
-            class="text-center"> </p><h2 class="text-center">Explore our
-            treatments</h2><p class="text-center">Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h3 class="text-center">EXPERIENCES AROUND THE ISLAND</h3><p
+            class="text-center"> </p><h2 class="text-center">Explore the island
+            with curated experiences</h2><p class="text-center">Lorem ipsum
+            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         image-width: max(25%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
         scroll-items:
             -
-                image: /uploads/treatment1.jpg
+                image: /uploads/experience3.jpg
                 block-content-html: >-
-                    <h3>Signature Sand bed</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p><p></p>
+                    <h3>Sunrise Water Purification</h3> <p>Embark upon a
+                    transformative pilgrimage to Bali's grandest active water
+                    temple. This hallowed site, celebrated for its age-old
+                    purification rites, has beckoned travellers in pursuit of
+                    spiritual rejuvenation for over a millennium.</p><p></p>
                 link:
             -
-                image: /uploads/treatment2.jpg
+                image: /uploads/experience4.jpg
                 block-content-html: >-
-                    <h3>Traditional Massages</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
+                    <h3>Private Cart Tour in Jatiluwih</h3> <p>Venture into the
+                    enchanting realm of Jatiluwih, a UNESCO World Heritage site,
+                    renowned for its mesmerising terraced rice paddies and
+                    deep-rooted cultural legacy. Embark upon an exclusive cart
+                    excursion, led by seasoned local guides, who shall elucidate
+                    the intricacies of the age-old Subak irrigation system—a
+                    testament to Balinese ingenuity.</p>
                 link:
-            -
-                image: /uploads/treatment3.jpg
-                block-content-html: >-
-                    <h3>Facial rejuvenation</h3> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
-                link:
-        color-scheme: base
+        color-scheme: dark
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: >-
