Updated 1 file via CloudCannon.

--- a/Experiences.html
+++ b/Experiences.html
@@ -77,7 +77,7 @@ blocks:
             esse cillum dolore eu fugiat nulla pariatur.</p>
         image-width: max(25%, 8rem)
         mobile-image-width: 80%
-        img_aspect: Square
+        img_aspect: Wide Landscape
         scroll-items:
             -
                 image: /uploads/experiences1.jpg
@@ -112,7 +112,7 @@ blocks:
             voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         image-width: max(25%, 8rem)
         mobile-image-width: 80%
-        img_aspect: Square
+        img_aspect: Wide Landscape
         scroll-items:
             -
                 image: /uploads/experience3.jpg
