Updated 2 files via CloudCannon.

--- a/offers.html
+++ b/offers.html
@@ -8,7 +8,7 @@ blocks:
             -
                 video_path:
                 video_type:
-        placeholder_image: /uploads/dining-beach.jpg
+        placeholder_image: /uploads/offers-banner.jpg
         controls: false
         autoplay: true
         text-alignment: center
@@ -17,12 +17,11 @@ blocks:
         min-height: 90vh
         color-scheme: dark
     -
-        _id: text-block-top-overlap
-        block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">Beach House</h2><p>The latest beachfront destination set along the sun-drenched shores of Canggu, Beach House blends coastal charm with refined elegance—and mesmerizing views directly on the world-famous Echo surf break.\L\L</p><p>Whether you're here to sip artisanal cocktails by the infinity pool, savour fresh locally sourced coastal cuisine, or unwind to sunset sounds, Beach House is your barefoot escape to Bali's effortlessly cool surfside lifestyle. Perfect for intimate gatherings, vibrant events, or serene solo moments—this is Canggu's new home of golden hours and ocean breeze.</p>"
-        overlay-color-scheme: dark
-        content-max-width: 35rem
+        _id: text-block
+        block-content-html: "<h3 class=\"sub-heading\">OFFERS</h3><h2 class=\"heading-lg\">Unwind in the idyllic setting \Lof Regent Bali Canggu</h2><p>Enhance your luxurious stay with exclusive offers and complimentary inclusions.</p><p><a class=\"button-featured\" href=\"#\">RESERVE NOW</a></p>"
+        content-max-width:
         text-alignment: center
-        color-scheme: dark
+        color-scheme: base
         min-height: 50vh
     -
         _id: split-banner-slider
