--- a/offers.html
+++ b/offers.html
@@ -28,25 +28,32 @@ blocks:
         location: Beach House
         events:
             -
-                heading: DJ Scott Bruce
-                sub-heading: Resident DJ
+                heading: "A Club Like \LNo Other"
+                sub-heading: FEATURED OFFER
                 full-description: >-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod  tempor
-                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: >-
-                    Celebrate the year’s end with exquisite dining and serene
-                    moments, embracing the art of graceful celebration.
-                featured-image: /uploads/dj-scott-bruce.jpg
+                    Regent Club elevates above the noise, offering more than
+                    just a  collection of uplifting experiences—it’s an
+                    exclusive retreat for the  distinguished. 
+
+
+                    Discover Regent Club your way, featuring all-day gourmet 
+                    offerings, premium alcoholic beverages, complimentary
+                    champagne, and  more.
+
+
+                    As the doors open you are in awe — in front an infinity
+                    pool, further away the ocean and blue skies greet you. The
+                    Regent Club team echoes  your name as you enter and escorts
+                    you to your preferred seating,  whether that may be indoors
+                    or outdoors. It’s up to you what you do  next, as everything
+                    is on your terms.
+                short-description:
+                featured-image: /uploads/offers2.jpg
                 button-link:
-                button-text: book a table
+                button-text: DISCOVER MORE
             -
-                heading: xyz
-                sub-heading: Resident DJ
+                heading: Elegance at Year’s End
+                sub-heading:
                 full-description: >-
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
@@ -83,23 +90,6 @@ blocks:
         _id: events-block
         location: Beach House
         events:
-            -
-                heading: DJ Scott Bruce
-                sub-heading: Resident DJ
-                full-description: >-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod  tempor
-                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: >-
-                    Celebrate the year’s end with exquisite dining and serene
-                    moments, embracing the art of graceful celebration.
-                featured-image: /uploads/dj-scott-bruce.jpg
-                button-link:
-                button-text: book a table
             -
                 heading: xyz
                 sub-heading: Resident DJ
