Updated 1 file via CloudCannon.

--- a/offers.html
+++ b/offers.html
@@ -85,11 +85,6 @@ blocks:
                 featured-image: /uploads/pool-bar2.jpg
                 button-link:
                 button-text: discover more
-        color-scheme: mint-300
-    -
-        _id: events-block
-        location: Beach House
-        events:
             -
                 heading: xyz
                 sub-heading: Resident DJ
@@ -104,7 +99,7 @@ blocks:
                 short-description: >-
                     Celebrate the year’s end with exquisite dining and serene
                     moments, embracing the art of graceful celebration.
-                featured-image: /uploads/elegancy-at-year-s-end.jpg
+                featured-image: /uploads/pool-bar2.jpg
                 button-link:
                 button-text: discover more
             -
