Updated 3 files via CloudCannon.

--- a/offers.html
+++ b/offers.html
@@ -17,13 +17,6 @@ blocks:
         min-height: 90vh
         color-scheme: dark
     -
-        _id: text-block
-        block-content-html: "<h3 class=\"sub-heading\">OFFERS</h3><h2 class=\"heading-lg\">Unwind in the idyllic setting \Lof Regent Bali Canggu</h2><p>Enhance your luxurious stay with exclusive offers and complimentary inclusions.</p><p><a class=\"button-featured\" href=\"#\">RESERVE NOW</a></p>"
-        content-max-width:
-        text-alignment: center
-        color-scheme: base
-        min-height: 50vh
-    -
         _id: events-block
         location: Beach House
         events:
@@ -69,54 +62,37 @@ blocks:
                 button-link:
                 button-text: discover more
             -
-                heading: xyz
-                sub-heading: Resident DJ
+                heading: "Advance\_Saver"
+                sub-heading:
                 full-description: >-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod  tempor
-                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: >-
-                    Celebrate the year’s end with exquisite dining and serene
-                    moments, embracing the art of graceful celebration.
-                featured-image: /uploads/pool-bar2.jpg
+                    Plan your stay early and save — a reward for booking in
+                    advance.
+                short-description:
+                featured-image: /uploads/offers4.jpg
                 button-link:
                 button-text: discover more
             -
-                heading: xyz
-                sub-heading: Resident DJ
+                heading: Stay Longer and Save
+                sub-heading:
                 full-description: >-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod  tempor
-                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: >-
-                    Celebrate the year’s end with exquisite dining and serene
-                    moments, embracing the art of graceful celebration.
-                featured-image: /uploads/pool-bar2.jpg
+                    Extend your adventure and save more. It’s the perfect chance
+                    to settle in and explore everything in Canggu and far
+                    beyond.
+                short-description:
+                featured-image: /uploads/offers5.jpg
                 button-link:
                 button-text: discover more
             -
-                heading: xyz
-                sub-heading: Resident DJ
+                heading: "Advance\_Saver"
+                sub-heading:
                 full-description: >-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod  tempor incididunt ut.</p><p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut.</p><p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod  tempor
-                    incididunt ut.</p><p>Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod  tempor incididunt ut.</p>
-                short-description: >-
-                    Celebrate the year’s end with exquisite dining and serene
-                    moments, embracing the art of graceful celebration.
-                featured-image: /uploads/pool-bar2.jpg
+                    Receive a complimentary upgrade to a  Lagoon Pool Suite,
+                    inclusive of a floating breakfast experience. Unwind 
+                    further with a 60-minute Balinese massage for two, and an
+                    afternoon tea  offering an assortment of delights and fine
+                    selection of teas.
+                short-description:
+                featured-image: /uploads/two-bedroom-suites.jpg
                 button-link:
                 button-text: discover more
         color-scheme: mint-300
