--- a/offers.html
+++ b/offers.html
@@ -64,34 +64,34 @@ blocks:
             -
                 heading: "Advance\_Saver"
                 sub-heading:
-                full-description: >-
+                full-description:
+                short-description: >-
                     Plan your stay early and save — a reward for booking in
                     advance.
-                short-description:
                 featured-image: /uploads/offers4.jpg
                 button-link:
                 button-text: discover more
             -
                 heading: Stay Longer and Save
                 sub-heading:
-                full-description: >-
+                full-description:
+                short-description: >-
                     Extend your adventure and save more. It’s the perfect chance
                     to settle in and explore everything in Canggu and far
                     beyond.
-                short-description:
                 featured-image: /uploads/offers5.jpg
                 button-link:
                 button-text: discover more
             -
                 heading: "Advance\_Saver"
                 sub-heading:
-                full-description: >-
+                full-description:
+                short-description: >-
                     Receive a complimentary upgrade to a  Lagoon Pool Suite,
                     inclusive of a floating breakfast experience. Unwind 
                     further with a 60-minute Balinese massage for two, and an
                     afternoon tea  offering an assortment of delights and fine
                     selection of teas.
-                short-description:
                 featured-image: /uploads/two-bedroom-suites.jpg
                 button-link:
                 button-text: discover more
