--- a/WeddingEvent.html
+++ b/WeddingEvent.html
@@ -63,7 +63,7 @@ blocks:
         collapse-bottom-space: false
         color-scheme: dark
     -
-        _id: horizontal-scroll-basic
+        _id: horizontal-scroll-spaces
         block-content-html: >-
             <h3 class="text-center">WEDDINGS &amp; EVENTS</h3><p
             class="text-center"> </p><h2 class="text-center">Inspiring
@@ -71,7 +71,7 @@ blocks:
             Bali Canggu, where timeless design and thoughtful service set the
             stage for inspired occasions, from intimate boardroom meetings to
             unforgettable weddings.</p>
-        image-width: max(30%, 8rem)
+        image-width: max(40%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
         scroll-items:
@@ -81,6 +81,11 @@ blocks:
                     <h3>Beach House</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p><p></p>
+                size: 1458 sqm
+                capacity: 120
+                banquet: 120
+                reception: 150
+                long-table: 100
                 link:
             -
                 image: /uploads/wedding-scroll2.jpg
@@ -88,6 +93,11 @@ blocks:
                     <h3>BEACH LAWN</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
+                size: 1458 sqm
+                capacity: 120
+                banquet: 120
+                reception: 150
+                long-table: 100
                 link:
             -
                 image: /uploads/wedding-scroll3.jpg
@@ -95,6 +105,11 @@ blocks:
                     <h3>CHEFS TABLE</h3> <p>Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut.</p>
+                size: 1458 sqm
+                capacity: 120
+                banquet: 120
+                reception: 150
+                long-table: 100
                 link:
         color-scheme: base
     -
