--- a/dinning-beach-house.html
+++ b/dinning-beach-house.html
@@ -51,6 +51,9 @@ blocks:
     -
         _id: events-block
         location: Beach House
+        sub-heading: Events
+        heading: Upcoming Events at Beach House
+        description: Enhance your  luxurious stay with exclusive offers and complimentary inclusions.
         events:
             -
                 heading: DJ Scott Bruce
