--- a/offers.html
+++ b/offers.html
@@ -18,7 +18,9 @@ blocks:
         color-scheme: dark
     -
         _id: events-block
-        location: Beach House
+        sub-heading: OFFERS
+        heading: Unwind in the idyllic setting of Regent Bali Canggu
+        description:  Enhance your  luxurious stay with exclusive offers and complimentary inclusions.
         events:
             -
                 heading: "A Club Like \LNo Other"
